fixing display weirdness with rx telemetry with BxF. fixing typos

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pegasus",
-  "version": "0.1.0",
-  "author": "Tim Sweet",
+  "version": "0.0.1",
+  "author": "Helio RC, LLC",
   "homepage": "https://www.heliorc.com",
-  "description": "No more Mr. Nice Gaius!",
+  "description": "Pegagus Multi-Firmware-UI",
   "main": "public/electron.js",
-  "repository": "https://github.com/heliorc/pegasus",
+  "repository": "https://github.com/heliorc/pegasus-ui",
   "buildDependenciesFromSource": true,
   "nodeGypRebuild": false,
   "npmRebuild": false,
