graph legend for rates, imuf af menu dropdowns. filter fiew optimizations, remove dynamic_filter feature when using imuf

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -24,6 +24,7 @@
       "CHANNEL_FORWARDING",
       "RX_SPI"
     ],
+    "FILTERS": ["DYNAMIC_FILTER"],
     "MOTORS": ["MOTOR_STOP", "ESC_SENSOR", "3D", "AIRMODE", "ANTI_GRAVITY"],
     "GPS": [
       "GPS",
