--- a/public/server/config/ui_config_rf1.json
+++ b/public/server/config/ui_config_rf1.json
@@ -13,6 +13,7 @@
     "ADVANCED"
   ],
   "routeFeatures": {},
+  "featurePorts": [],
   "groups": {
     "OSD": ["osd"],
     "BLACKBOX": ["blackbox"],
