--- a/public/server/config/ui_config_rf1.json
+++ b/public/server/config/ui_config_rf1.json
@@ -1,5 +1,6 @@
 {
   "routes": [
+    "PFC",
     "PID",
     "MOTORS",
     "MODES",
@@ -15,6 +16,7 @@
   "routeFeatures": {},
   "featurePorts": [],
   "groups": {
+    "PFC": ["pfc"],
     "OSD": ["osd"],
     "BLACKBOX": ["blackbox"],
     "MODES": ["modes"],
