--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-scripts": "1.1.5",
     "react-text-mask": "^5.4.3",
     "serialport": "^7.0.2",
+    "three": "^0.97.0",
+    "three-stl-loader": "^1.0.6",
     "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
     "websocket": "^1.0.28"
   },
