--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
   },
   "dependencies": {
     "@connectedyard/node-intelhex": "^1.2.4",
-    "@material-ui/core": "^3.1.1",
+    "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
-    "@material-ui/lab": "^3.0.0-alpha.17",
+    "@material-ui/lab": "^3.0.0-alpha.20",
     "electron-context-menu": "^0.10.0",
     "electron-updater": "^3.1.2",
-    "express": "^4.16.3",
-    "express-fileupload": "^1.0.0-alpha.1",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
     "material-ui": "^0.20.2",
-    "material-ui-slider": "^0.1.0",
+    "material-ui-slider": "^0.1.10",
     "node-hid": "^0.7.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-easy-chart": "^1.0.0",
     "react-grid-layout": "^0.16.6",
-    "react-intl": "^2.7.0",
+    "react-intl": "^2.7.1",
     "react-markdown": "^3.6.0",
     "react-scripts": "1.1.5",
     "react-text-mask": "^5.4.3",
@@ -72,16 +72,16 @@
     "preelectron-pack": "yarn build && yarn build-css"
   },
   "devDependencies": {
-    "node-sass-chokidar": "0.0.3",
     "concurrently": "^3.5.0",
-    "electron": "^3.0.4",
+    "electron": "^3.0.5",
     "electron-builder": "^20.28.4",
-    "electron-packager": "^12.1.2",
+    "electron-packager": "^12.2.0",
     "electron-rebuild": "^1.8.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.3.0",
+    "node-sass-chokidar": "0.0.3",
     "prettier": "^1.14.3",
-    "wait-on": "^3.0.1"
+    "wait-on": "^3.1.0"
   },
   "darwinDependencies": {
     "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
