fixing state engine for the flight controller config

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -273,6 +273,10 @@
     "ADVANCED": ["advanced"]
   },
   "elements": {
+    "feedforward_transition": {
+      "float": true,
+      "pad": 3
+    },
     "vbat_detect_cell_voltage": {
       "float": true,
       "pad": 2
