--- a/public/server/config/ui_config_rf1.json
+++ b/public/server/config/ui_config_rf1.json
@@ -692,7 +692,7 @@
         },
         {
           "value": "7",
-          "label": "ESC_DSHOT1200"
+          "label": "DSHOT1200"
         }
       ]
     },
