--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "electron-dev-win": "concurrently \"yarn watch-css\" \"set BROWSER=none&&yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "build --mac",
     "electron-pack-win": "yarn build && build --win --ia32 --x64",
-    "electron-pack-lin": "yarn build && build -l --ia32 --x64",
+    "electron-pack-lin": "yarn build && build -l",
     "preelectron-pack": "yarn build && yarn build-css"
   },
   "devDependencies": {
